# Solaar

./: Makefile  pyproject.toml
.github/workflows/: pages.yml  tests.yml
lib/hidapi/: hidapi_impl.py  udev_impl.py
lib/logitech_receiver/: base.py  common.py  descriptors.py  device.py  diversion.py  hidpp10_constants.py  hidpp20.py  hidpp20_constants.py  notifications.py  receiver.py  settings.py  settings_templates.py
lib/solaar/: gtk.py  listener.py
lib/solaar/cli/: config.py  show.py
lib/solaar/ui/: action.py  config_panel.py  diversion_rules.py  pair_window.py  rule_actions.py  rule_conditions.py  window.py
lib/solaar/ui/pairing/: model.py  pairing.py  presenter.py  view.py
tests/logitech_receiver/: test_common.py  test_hidpp10.py  test_hidpp20_complex.py  test_hidpp20_simple.py  test_setting_templates.py
