[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solaar"
version = "1.1.13"  # Replace with the actual version from lib/solaar/version
description = "Linux device manager for Logitech receivers, keyboards, mice, and tablets."
readme = "README.md"
license = { text = "GPL-2.0-only" }
authors = [
    { name = "Daniel Pavel" }
]
urls = { Homepage = "http://pwr-solaar.github.io/Solaar/" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: DFSG approved",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    'evdev >= 1.1.2; platform_system == "Linux"',
    "pyudev >= 0.13",
    "PyYAML >= 3.12",
    "python-xlib >= 0.27",
    "psutil >= 5.4.3",
    'dbus-python; platform_system == "Linux"',
    "PyGObject",
]

[project.optional-dependencies]
report-descriptor = ["hid-parser"]
desktop-notifications = ["Notify >= 0.7"]
git-commit = ["python-git-info"]
test = ["pytest", "pytest-mock", "pytest-cov", "typing_extensions"]
dev = ["ruff"]

[project.scripts]
solaar = "bin.solaar:main"

[tool.setuptools]
package-dir = { "" = "lib" }

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.data-files]
"share/icons/hicolor/scalable/apps" = ["share/solaar/icons/solaar*.svg"]
"share/icons/hicolor/32x32/apps" = ["share/solaar/icons/solaar-light_*.png"]
"share/locale" = ["share/locale/*/LC_MESSAGES/solaar.mo"]
"share/applications" = ["share/applications/solaar.desktop"]
"lib/udev/rules.d" = ["rules.d/42-logitech-unify-permissions.rules"]
"share/metainfo" = ["share/solaar/io.github.pwr_solaar.solaar.metainfo.xml"]

[tool.ruff]
line-length = 127
target-version = "py37"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "B", # flake8-bugbear
    "I", # isort
]

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
